# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_coder"
version = "0.1.0"
authors = [
  { name="Zed", email="none@example.com" }, # 请替换为你的信息
]
description = "一个具有程序执行监控和中断功能的 AI 代码构建智能体"
readme = "README.md" # 假设 README.md 包含项目描述
requires-python = ">=3.8" # 指定最低 Python 版本
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # 假设使用 MIT 许可证，如果不同请修改
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha", # 开发状态
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "openai>=1.0.0", # 主要依赖
    # 如果有其他依赖，请在此处添加
]

[project.urls]
"Homepage" = "https://github.com/lihua179/agent_coder" # 请替换为你的 GitHub 仓库 URL
"Bug Tracker" = "https://github.com/lihua179/agent_coder/issues" # 请替换

[tool.setuptools]
# 明确指定要包含在包中的 Python 模块文件（不带 .py 后缀）
# 这将排除同目录下的其他目录，如 task 和 agent_work
py-modules = [
    "__init__",
    "agent",
    "chat_api",
    "data_struct",
    "file_exec",
    "program_exec",
]
